--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "next": "9.5.3",
     "next-images": "^1.4.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "swr": "^0.3.7"
   },
   "devDependencies": {
     "@types/node": "^14.6.3",
