--- a/backend/laravel_app/composer.json
+++ b/backend/laravel_app/composer.json
@@ -16,7 +16,9 @@
         "laravel/jetstream": "^1.4",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
-        "livewire/livewire": "^2.0"
+        "livewire/livewire": "^2.0",
+        "s-ichikawa/laravel-sendgrid-driver": "^3.0",
+        "sendgrid/sendgrid": "^7.8"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
