--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "js-cookie": "^2.2.1",
     "next": "9.5.3",
     "next-images": "^1.4.1",
     "react": "~16.11.0",
@@ -17,6 +18,7 @@
     "swr": "^0.3.7"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.6.3",
     "@types/react": "^16.9.49",
     "@types/styled-components": "^5.1.3",
