--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.21.0",
     "js-cookie": "^2.2.1",
+    "jwt-decode": "^3.1.1",
     "next": "9.5.3",
+    "next-cookies": "^2.0.3",
     "next-images": "^1.4.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.6",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^14.6.3",
     "@types/react": "^16.9.49",
     "@types/styled-components": "^5.1.3",
