--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "next-images": "^1.4.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
+    "react-input-mask": "^2.0.4",
     "styled-components": "^5.1.1",
     "swr": "^0.3.7"
   },
@@ -24,6 +25,7 @@
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "^14.6.3",
     "@types/react": "^16.9.49",
+    "@types/react-input-mask": "^2.0.5",
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
