--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "next-images": "^1.4.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
+    "react-dropzone": "^11.2.4",
     "react-input-mask": "^2.0.4",
     "styled-components": "^5.1.1",
     "swr": "^0.3.7"
